fixed wrong paddings and margins inside sidebar menu

--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -139,7 +139,9 @@ dd {
     background-repeat: no-repeat;
     z-index: 75;
 }
-
+#R-topics {
+    margin-left: -0.55rem;
+}
 #R-sidebar a {
     text-decoration: none;
 }
@@ -232,7 +234,7 @@ dd {
 
 #R-sidebar .padding {
     padding: 0;
-    padding-left: 1.4rem;
+    padding-left: 1.8rem;
     padding-right: 1.6rem;
 }
 
